samples/_failures_safe/1761155700_c18c17_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2aa36116.c: In function ‘main’:
./samples/SAFE/__tmp_2aa36116.c:175:9: error: expected expression at end of input
  175 |         if (!get_token(&
      |         ^~
./samples/SAFE/__tmp_2aa36116.c:175:14: error: too few arguments to function ‘get_token’
  175 |         if (!get_token(&
      |              ^~~~~~~~~
./samples/SAFE/__tmp_2aa36116.c:28:5: note: declared here
   28 | int get_token(struct Token *token, const char *input, int *pos, int line, int *col) {
      |     ^~~~~~~~~
./samples/SAFE/__tmp_2aa36116.c:175:9: error: expected declaration or statement at end of input
  175 |         if (!get_token(&
      |         ^~
./samples/SAFE/__tmp_2aa36116.c:175:9: error: expected declaration or statement at end of input
